<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_splash">Weather</string>

    <!-- Strings used for fragments for navigation -->
    <string name="today">Today</string>
    <string name="week">Week</string>

    <!-- Strings used for ui elements -->
    <string name="temperature">Temperature:</string>
    <string name="weather">Weather:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="c">°C</string>
    <string name="hpa">hPa</string>
    <string name="m_s">m/s</string>
    <string name="date">Date</string>
    <string name="min_temp">Min Temp:</string>
    <string name="max_temp">Max Temp:</string>

    <!-- Strings used for dialogs -->
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">Please check your internet connection to update the data.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_city">Please select city</string>
</resources>