<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.TodayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/weather_card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp"
        >

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/temperature"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_temperature"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pressure"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_pressure"
            app:layout_constraintStart_toEndOf="@+id/tv_pressure" />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/wind_speed"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

        <TextView
            android:id="@+id/tv_wind_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_wind_speed"
            app:layout_constraintStart_toEndOf="@+id/tv_wind_speed" />

        <TextView
            android:id="@+id/tv_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/c"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_temperature_value"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature_value" />

        <TextView
            android:id="@+id/tv_pressure_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/hpa"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_pressure_value"
            app:layout_constraintStart_toEndOf="@+id/tv_pressure_value" />

        <TextView
            android:id="@+id/tv_wind_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/m_s"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_wind_speed_value"
            app:layout_constraintStart_toEndOf="@+id/tv_wind_speed_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>